Fix live editor preview too small/big on iOS/safari

--- a/packages/js-draw/src/Editor.scss
+++ b/packages/js-draw/src/Editor.scss
@@ -65,7 +65,7 @@
 	// ResizeObserver errors: https://developer.mozilla.org/en-US/docs/Web/API/ResizeObserver#observation_errors
 	width: 100%;
 	height: 400px;
-	min-height: 250px;
+	min-height: 220px;
 	min-width: 100px;
 
 	box-sizing: border-box;
